upgrade to spring boot 3.2 and cxf 4.0