@@ -17,8 +17,8 @@ import org.apache.cxf.jaxws.JaxWsProxyFactoryBean;
 import org.ogf.nsi.grpc.connection.common.GenericAcknowledgment;
 import org.ogf.nsi.grpc.connection.requester.*;
 
-import javax.xml.ws.Holder;
-import javax.xml.ws.WebServiceException;
+import jakarta.xml.ws.Holder;
+import jakarta.xml.ws.WebServiceException;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.logging.Logger;
@@ -64,7 +64,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void reserveConfirmed(ReserveConfirmedRequest pbReserveConfirmedRequest,
                                  StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP reserveConfirmed to %s at %s",
+            LOG.info("gRPC->SOAP reserveConfirmed to %s at %s".formatted(
                     pbReserveConfirmedRequest.getHeader().getRequesterNsa(),
                     pbReserveConfirmedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `ReserveConfirmedRequest`:\n" + pbReserveConfirmedRequest.toString());
@@ -94,7 +94,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void reserveFailed(GenericFailedRequest pbReserveFailedRequest,
                               StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP reserveFailed to %s at %s",
+            LOG.info("gRPC->SOAP reserveFailed to %s at %s".formatted(
                     pbReserveFailedRequest.getHeader().getRequesterNsa(),
                     pbReserveFailedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `GenericFailedRequest`:\n" + pbReserveFailedRequest.toString());
@@ -122,7 +122,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void reserveAbortConfirmed(GenericConfirmedRequest pbReserveAbortConfirmedRequest,
                                       StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP reserveAbortConfirmed to %s at %s",
+            LOG.info("gRPC->SOAP reserveAbortConfirmed to %s at %s".formatted(
                     pbReserveAbortConfirmedRequest.getHeader().getRequesterNsa(),
                     pbReserveAbortConfirmedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `GenericConfirmedRequest`:\n" + pbReserveAbortConfirmedRequest.toString());
@@ -148,7 +148,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void reserveCommitConfirmed(GenericConfirmedRequest pbReserveCommitConfirmedRequest,
                                        StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP reserveCommitConfirmed to %s at %s",
+            LOG.info("gRPC->SOAP reserveCommitConfirmed to %s at %s".formatted(
                     pbReserveCommitConfirmedRequest.getHeader().getRequesterNsa(),
                     pbReserveCommitConfirmedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `GenericConfirmedRequest`:\n" + pbReserveCommitConfirmedRequest.toString());
@@ -174,7 +174,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void reserveCommitFailed(GenericFailedRequest pbReserveCommitFailedRequest,
                                     StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP reserveCommitFailed to %s at %s",
+            LOG.info("gRPC->SOAP reserveCommitFailed to %s at %s".formatted(
                     pbReserveCommitFailedRequest.getHeader().getRequesterNsa(),
                     pbReserveCommitFailedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `GenericFailedRequest`:\n" + pbReserveCommitFailedRequest.toString());
@@ -203,7 +203,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void error(ErrorRequest pbErrorRequest,
                       io.grpc.stub.StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP error to %s at %s",
+            LOG.info("gRPC->SOAP error to %s at %s".formatted(
                     pbErrorRequest.getHeader().getRequesterNsa(),
                     pbErrorRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `ErrorRequest`:\n" + pbErrorRequest.toString());
@@ -230,7 +230,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void errorEvent(ErrorEventRequest pbErrorEventRequest,
                            io.grpc.stub.StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP errorEvent to %s at %s",
+            LOG.info("gRPC->SOAP errorEvent to %s at %s".formatted(
                     pbErrorEventRequest.getHeader().getRequesterNsa(),
                     pbErrorEventRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `ErrorEventRequest`:\n" + pbErrorEventRequest.toString());
@@ -265,7 +265,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void provisionConfirmed(GenericConfirmedRequest pbProvisionConfirmedRequest,
                                        StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP provisionConfirmed to %s at %s",
+            LOG.info("gRPC->SOAP provisionConfirmed to %s at %s".formatted(
                     pbProvisionConfirmedRequest.getHeader().getRequesterNsa(),
                     pbProvisionConfirmedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `GenericConfirmedRequest`:\n" + pbProvisionConfirmedRequest.toString());
@@ -293,7 +293,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void releaseConfirmed(GenericConfirmedRequest pbReleaseConfirmedRequest,
                                        StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP releaseConfirmed to %s at %s",
+            LOG.info("gRPC->SOAP releaseConfirmed to %s at %s".formatted(
                     pbReleaseConfirmedRequest.getHeader().getRequesterNsa(),
                     pbReleaseConfirmedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `GenericConfirmedRequest`:\n" + pbReleaseConfirmedRequest.toString());
@@ -322,7 +322,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void terminateConfirmed(GenericConfirmedRequest pbTerminateConfirmedRequest,
                                        StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP terminateConfirmed to %s at %s",
+            LOG.info("gRPC->SOAP terminateConfirmed to %s at %s".formatted(
                     pbTerminateConfirmedRequest.getHeader().getRequesterNsa(),
                     pbTerminateConfirmedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `GenericConfirmedRequest`:\n" + pbTerminateConfirmedRequest.toString());
@@ -350,7 +350,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void dataPlaneStateChange(DataPlaneStateChangeRequest pbDataPlaneStateChangeRequest,
                                     StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP dataPlaneStateChange to %s at %s",
+            LOG.info("gRPC->SOAP dataPlaneStateChange to %s at %s".formatted(
                     pbDataPlaneStateChangeRequest.getHeader().getRequesterNsa(),
                     pbDataPlaneStateChangeRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `DataPlaneStateChangeRequest`:\n" + pbDataPlaneStateChangeRequest.toString());
@@ -381,7 +381,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void reserveTimeout(ReserveTimeoutRequest pbReserveTimeoutRequest,
                                     StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP reserveTimeout to %s at %s",
+            LOG.info("gRPC->SOAP reserveTimeout to %s at %s".formatted(
                     pbReserveTimeoutRequest.getHeader().getRequesterNsa(),
                     pbReserveTimeoutRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `ReserveTimeoutRequest`:\n" + pbReserveTimeoutRequest.toString());
@@ -414,7 +414,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void querySummaryConfirmed(QueryConfirmedRequest pbQueryConfirmedRequest,
                                       StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP querySummaryConfirmed to %s at %s",
+            LOG.info("gRPC->SOAP querySummaryConfirmed to %s at %s".formatted(
                     pbQueryConfirmedRequest.getHeader().getRequesterNsa(),
                     pbQueryConfirmedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `QueryConfirmedRequest`:\n" + pbQueryConfirmedRequest.toString());
@@ -447,7 +447,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void queryRecursiveConfirmed(QueryConfirmedRequest pbQueryConfirmedRequest,
                                         StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP queryRecursiveConfirmed to %s at %s",
+            LOG.info("gRPC->SOAP queryRecursiveConfirmed to %s at %s".formatted(
                     pbQueryConfirmedRequest.getHeader().getRequesterNsa(),
                     pbQueryConfirmedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `QueryConfirmedRequest`:\n" + pbQueryConfirmedRequest.toString());
@@ -475,7 +475,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void queryNotificationConfirmed(QueryNotificationConfirmedRequest pbQueryNotificationConfirmedRequest,
                                            StreamObserver<GenericAcknowledgment> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP queryNotificationConfirmed to %s at %s",
+            LOG.info("gRPC->SOAP queryNotificationConfirmed to %s at %s".formatted(
                     pbQueryNotificationConfirmedRequest.getHeader().getRequesterNsa(),
                     pbQueryNotificationConfirmedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `QueryNotificationConfirmedRequest`:\n" + pbQueryNotificationConfirmedRequest.toString());
@@ -502,7 +502,7 @@ public class ConnectionRequesterService extends ConnectionRequesterGrpc.Connecti
     public void queryResultConfirmed(QueryResultConfirmedRequest pbQueryResultConfirmedRequest,
                                      StreamObserver<org.ogf.nsi.grpc.connection.requester.QueryResultConfirmedResponse> responseObserver) {
         try {
-            LOG.info(String.format("gRPC->SOAP queryResultConfirmed to %s at %s",
+            LOG.info("gRPC->SOAP queryResultConfirmed to %s at %s".formatted(
                     pbQueryResultConfirmedRequest.getHeader().getRequesterNsa(),
                     pbQueryResultConfirmedRequest.getHeader().getReplyTo()));
             LOG.finer("Received protobuf message `QueryResultConfirmedRequest`:\n" + pbQueryResultConfirmedRequest);
